--- a/Views/Shared/_OutputCurrentPartial.cshtml
+++ b/Views/Shared/_OutputCurrentPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model string
 
-<div class="tab-pane active output-current-partial-container">
+<div class="tab-pane active">
     <img src="@Model" alt="Output Image" class="rounded-lg shadow-lg" />
         <p>
         This section provides an overview of the selected category or command, including general
