--- a/Views/Shared/_OutputOverviewPartial.cshtml
+++ b/Views/Shared/_OutputOverviewPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="tab-pane active output-overview-partial-container">
+﻿<div class="tab-pane active">
     <img src="https://placehold.co/600x400" alt="Output Image" class="rounded-lg shadow-lg" />
     <div id="overview" class="tab-pane hidden">
         <p>
