--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -96,65 +96,60 @@
             var url = $(this).data("url");
             loadModePartialView(url);
         });
-    });
 
-    document.querySelectorAll('.tab').forEach(tab => {
-        tab.addEventListener('click', () => {
-            document.querySelectorAll('.tab').forEach(t => {
-                t.classList.remove('tab-active', 'bg-blue-500', 'text-white');
-                t.classList.add('bg-zinc-700', 'text-zinc-900');
+        document.querySelectorAll('.tab').forEach(tab => {
+            tab.addEventListener('click', () => {
+                document.querySelectorAll('.tab').forEach(t => {
+                    t.classList.remove('tab-active', 'bg-blue-500', 'text-white');
+                    t.classList.add('bg-zinc-700', 'text-zinc-900');
+                });
+                tab.classList.add('tab-active', 'bg-blue-500', 'text-white');
             });
-            tab.classList.add('tab-active', 'bg-blue-500', 'text-white');
         });
-    });
 
-    document.querySelector('#quick-request-form').addEventListener('submit', function (event) {
-        event.preventDefault();
+        document.querySelector('#quick-request-form').addEventListener('submit', function (event) {
+            event.preventDefault();
 
-        const formData = new FormData(event.target);
+            const formData = new FormData(event.target);
 
-        fetch('/Home/QuickRequest', {
-            method: 'POST',
-            body: new URLSearchParams(formData),
-            headers: {
-                'Content-Type': 'application/x-www-form-urlencoded'
-            }
-        })
-            .then(response => response.json())
-            .then(data => {
-                if (data.error) {
-                    alert("Error: " + data.error);
-                    console.log("Error: ", data.error);
-                } else {
-                    const imageUrl = data.path;
-                    console.log("Image URL: ", imageUrl);
-
-                    var partialUrl = `/Home/OutputCurrent?currentImageUrl=${encodeURIComponent(imageUrl)}`;
-                    loadOutputPartialView(partialUrl);
+            fetch('/Home/QuickRequest', {
+                method: 'POST',
+                body: new URLSearchParams(formData),
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded'
                 }
             })
-            .catch(error => {
-                alert("An error occurred: " + error.message);
-                console.log("Fetch error: ", error);
-            });
-    });
+                .then(response => response.json())
+                .then(data => {
+                    if (data.error) {
+                        alert("Error: " + data.error);
+                        console.log("Error: ", data.error);
+                    } else {
+                        const imageUrl = data.path;
+                        console.log("Image URL: ", imageUrl);
 
+                        var partialUrl = `/Home/OutputCurrent?currentImageUrl=${encodeURIComponent(imageUrl)}`;
+                        loadOutputPartialView(partialUrl);
+                    }
+                })
+                .catch(error => {
+                    alert("An error occurred: " + error.message);
+                    console.log("Fetch error: ", error);
+                });
+        });
 
-</script>
+        document.querySelector('#quick-request-form').addEventListener('submit', function (event) {
+            event.preventDefault();
 
-<script>
-    document.querySelector('#quick-request-form').addEventListener('submit', function (event) {
-        event.preventDefault();
+            const formData = new FormData(event.target);
 
-        const formData = new FormData(event.target);
-
-        fetch('/Home/QuickRequest', {
-            method: 'POST',
-            body: new URLSearchParams(formData),
-            headers: {
-                'Content-Type': 'application/x-www-form-urlencoded'
-            }
-        })
+            fetch('/Home/QuickRequest', {
+                method: 'POST',
+                body: new URLSearchParams(formData),
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded'
+                }
+            })
             .then(response => response.json())
             .then(data => {
                 if (data.error) {
@@ -165,15 +160,17 @@
                     console.log("Image URL: ", imageUrl);
 
                     document.getElementById("output-partial-container")
-                        .innerHTML = '<div class="tab-pane active"><img class="rounded-lg shadow-lg" src="' + imageUrl + '"></img></div>'
+                        .innerHTML = '<div class="tab-pane active"><img class="rounded-lg shadow-lg" src="' + imageUrl + '"></img></div>';
                 }
             })
             .catch(error => {
                 alert("An error occurred: " + error.message);
                 console.log("Fetch error: ", error);
             });
+        });
     });
 </script>
+
 
 <style>
     .main-container {
