--- a/Views/Shared/_QuickModePartial.cshtml
+++ b/Views/Shared/_QuickModePartial.cshtml
@@ -32,6 +32,7 @@
                 </div>
             </div>
             <button 
+                id="generate-submit-button"
                 type="submit" 
                 class="btn-yellow inline-flex items-center px-5 py-2.5 mt-4 sm:mt-6 text-sm font-medium text-center text-white bg-primary-700 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-primary-800">
                 Generate
