Added a db and required models, large amount work done in laying the infrastructure for the db.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -134,6 +134,11 @@
 
                 if (data.error) {
 
+
+                dadasda TODO : handle the new response format
+
+
+
                     alert("Error: " + data.error);
                     console.log("Error: ", data.error);
                 
